discussion/kv_engine/155097/155097_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time (memcached)

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7 in memcached.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

Note that this now requires that the LOG_<LEVEL> macros always take a
valid fmtlib format string as the first argument, a raw string literal
is no longer supported - the following will no longer compile:

    LOG_DEBUG("Something happened"); // compile-time error.

Instead, the _RAW macros added in the previous patch should be used:

    LOG_DEBUG_RAW("Something else happened"); OK

Note: The issue here is that to perform compile-time format string
      checking, the format string must be wrapped in FMT_STRING() -
      before the format string is evaluated / passed into the actual
      logging functions / methods. However, one cannot pass a
      non-string literatl to FMT_STRING - essentially by design it
      fails at compile-time if it doesn't have {} placeholders.

      To address this (and still allow both styles of parameters) we
      _could_ in theory do some complex preprocessor logic - count the
      number of variadic arguments at compile-time and only apply
      FMT_STRING() macro to first if there is 2 or more arguments in
      total. I got something working for GCC and clang and which did
      this, but it didn't work for MSVC and the GCC one triggered a
      load of warnings, hence just making original macros always
      fmt-style, and adding _RAW for plan unformatted values.

Change-Id: I5f4e84c04deb5a4e6ed5eae243a9327cd017ec60

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-06-07 10:24:44.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-07 11:02:44.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9551/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9551/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9551/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11543/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11543/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8147/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/98/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31192/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11126/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19129/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10196/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11273/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-07 12:23:27.000000000
Message: 
Patch Set 3:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9551/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9551/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9551/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8147/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/98/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31192/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11126/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19129/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10196/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11273/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11548/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-07 13:06:21.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-07 13:07:13.000000000
Message: 
Patch Set 3: Verified+1

Overriding clang-tidy failure - error unrelated to this patch (appears to be issue with auto-generated headers).
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 13:16:49.000000000
Message: 
Patch Set 3: Code-Review+2

(2 comments)
Line:451, daemon/subdocument.cc -> nit: might be worth adding a comment to the commit message that this patch also fixes a few logging bugs.

Line:75, logger/logger_test.cc -> Ditto

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-07 13:47:01.000000000
Message: 
Patch Set 3:

(1 comment)
Line:451, daemon/subdocument.cc -> Ack

----------------------------------------------------------------------------------------------------------------------
